<resources>
    <string name="app_name">SEG2105_Final_Project</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calender">TODO</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="showTime">TextView</string>
    <string name="walmart">Walmart</string>
    <string name="lablaws">Loblaws</string>
    <string name="metro">Metro</string>
    <string name="canadian_tire">Canadian Tire</string>
    <string name="bestbuy">Bestbuy</string>
    <string name="t_t">T and T</string>
    <string name="shoppers_drug_mart">Shoppers Drug Mart</string>
    <string name="other">Other</string>
    <string name="name_of_market">Search Name of the Market</string>
    <string name="note_chinese_meal_please">Note: Chinese meal please!</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="send_message">Send Message</string>
    <string name="kobe_bryant">Kobe Bryant</string>
    <string name="register_bt">REGISTER</string>
    <string name="hint">hint</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="name">Register</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="refresh">Refresh</string>
    <string name="name_of_task">name of task</string>
    <string name="points">points (Ex: 5)</string>
    <string name="due_date">Due date: 17-12-30</string>
    <string name="due_time">Due time: 22:55</string>
    <string name="confirm">Confirm</string>
    <string name="add_new_task">Add new task</string>
    <string name="open_tasks">Open tasks</string>
    <string name="shopping_list">Shopping list</string>
    <string name="sechedule">Sechedule</string>
    <string name="task_backlog">Task Backlog</string>
    <string name="people">People</string>
    <string name="cupboard_and_fridge">Cupboard and Fridge</string>
    <string name="broom_clost_tools">Broom Clost (Tools)</string>
    <string name="location">Location</string>
    <string name="project_name">Newbies\' Final Project</string>
    <string name="showTask">Show my tasks</string>
    <string name="log_out">Log out</string>
    <string name="navigate">NAVIGATE</string>
    <string name="delete">Delete</string>
    <string name="shopping">Shopping</string>
    <string name="tasks">Tasks</string>
    <string name="states">states</string>
    <string name="task_name">Task Name:</string>
    <string name="point">Points:</string>
    <string name="item_name">Item name</string>
    <string name="groceries">Groceries</string>
    <string name="material">Material</string>
    <string name="creator">Creator</string>
    <string name="worker">Worker</string>
    <string name="user_name">UserName</string>
    <string name="about_us">About us</string>
    <string name="all_user">All user</string>
    <string name="successful_delete">Successful delete</string>
    <string name="fail_delete">Cannot delete the chore because you are not the creator</string>
    <string name="deleted_chore">This chore has already been deleted.</string>
    <string name="finish">Finish</string>
    <string name="successful_complete">Successful complete</string>
    <string name="fail_complete">You are not the worker of this chore so you cannot complete it.</string>
    <string name="already_complete">This chore has already been submit.</string>
    <string name="signUser">Sign a worker</string>
</resources>
