<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/open_tasks"
            android:icon="@drawable/tasks"
            android:title="@string/open_tasks" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/cart2"
            android:title="@string/shopping_list" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/sechedule" />
        <item
            android:id="@+id/task_backlog"
            android:icon="@drawable/tasks2"
            android:title="@string/task_backlog" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/people"
            android:title="@string/people" />
        <item
            android:id="@+id/Cupboard_Fridge"
            android:icon="@drawable/fridge"
            android:title="@string/cupboard_and_fridge" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/tools"
            android:title="@string/broom_clost_tools" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/location2"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />
    </group>

</menu>
