<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uottawa.leyaoli.seg2105_final_project.ChoreDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_of_task"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/points" />

        <TextView
            android:id="@+id/dueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/due_date" />

        <TextView
            android:id="@+id/dueTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/due_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/common_google_play_services_update_button" />

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="deleteChore"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
